[gcc] 2017-01-19  Michael Meissner  <meissner@linux.vnet.ibm.com>
	* config/rs6000/rs6000-cpus.def (ISA_3_0_MASKS_SERVER): Enable
	-mpower9-minmax by default for -mcpu=power9.
	(ISA_3_MASKS_IEEE): Require -mvsx-small-integer to enable IEEE
	128-bit floating point.

[gcc/testsuite]
2017-01-19  Michael Meissner  <meissner@linux.vnet.ibm.com>

	* gcc.target/powerpc/float128-hw.c: Do not require IEEE 128-bit
	floating point hardware to run test.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244662 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-19  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	* gcc.target/powerpc/float128-hw.c: Do not require IEEE 128-bit
+	floating point hardware to run test.
+
 2017-01-19  Tamar Christina  <tamar.christina@arm.com>
 
 	* gcc/testsuite/lib/target-supports.exp
