--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2017-01-19  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	* config/rs6000/rs6000-cpus.def (ISA_3_0_MASKS_SERVER): Enable
+	-mpower9-minmax by default for -mcpu=power9.
+	(ISA_3_MASKS_IEEE): Require -mvsx-small-integer to enable IEEE
+	128-bit floating point.
+
 2017-01-20  Alan Modra  <amodra@gmail.com>
 
 	* config/rs6000/rs6000.md (cmpstrnsi, cmpstrsi): Fail if
