--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-19  Matthew Fortune  <matthew.fortune@imgtec.com>
+
+	* doc/invoke.texi: Add missing -mlxc1-sxc1 options to
+	overall option summary.
+
 2017-01-19  Jiong Wang  <jiong.wang@arm.com>
 
 	* config/aarch64/aarch64-arches.def: New entry for "armv8.3-a".
