PR64903 simplify last fix to std::is_partitioned
	PR libstdc++/64903
	* include/bits/stl_algo.h (is_partitioned): Use increment instead of
	std::advance.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244675 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-20  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/64903
+	* include/bits/stl_algo.h (is_partitioned): Use increment instead of
+	std::advance.
+
 2017-01-19  Jonathan Wakely  <jwakely@redhat.com>
 
 	PR libstdc++/79156
@@ -7,7 +13,7 @@
 	* testsuite/ext/shared_ptr/1.cc: New test.
 
 	PR libstdc++/64903
-	* include/bits/stl_algo.h (is_partioned): Don't retest the partition
+	* include/bits/stl_algo.h (is_partitioned): Don't retest the partition
 	point.
 	* testsuite/25_algorithms/is_partitioned/2.cc: New test.
 
