rs6000: Fix the new SSP guard configuration code (PR79140)
I foolishly tested this with r241087 reverted.  After that revision
default_stack_protect_guard is no longer called if the compiler defaults
to using the TLS guard, which of course is the wrong thing to do if
there is some other way to enable the global guard.

This fixes it.


	PR target/78875
	PR target/79140
	* config/rs6000/rs6000.c (TARGET_STACK_PROTECT_GUARD): Unconditionally
	define to rs6000_init_stack_protect_guard.
	(rs6000_init_stack_protect_guard): New function.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244677 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2017-01-19  Segher Boessenkool  <segher@kernel.crashing.org>
+
+	PR target/78875
+	PR target/79140
+	* config/rs6000/rs6000.c (TARGET_STACK_PROTECT_GUARD): Unconditionally
+	define to rs6000_init_stack_protect_guard.
+	(rs6000_init_stack_protect_guard): New function.
+
 2017-01-19  Matthew Fortune  <matthew.fortune@imgtec.com>
 	    Yunqiang Su  <yunqiang.su@imgtec.com>
 
