PR69321 fix any_cast<T>(any*) for non-copyable T
	PR libstdc++/69321
	* include/experimental/any (__any_caster): Avoid instantiating
	manager function for types that can't be stored in any.
	* include/std/any (__any_caster): Likewise.
	* testsuite/20_util/any/misc/any_cast.cc: Test non-copyable type.
	* testsuite/experimental/any/misc/any_cast.cc: Likewise.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244678 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,5 +1,12 @@
 2017-01-20  Jonathan Wakely  <jwakely@redhat.com>
 
+	PR libstdc++/69321
+	* include/experimental/any (__any_caster): Avoid instantiating
+	manager function for types that can't be stored in any.
+	* include/std/any (__any_caster): Likewise.
+	* testsuite/20_util/any/misc/any_cast.cc: Test non-copyable type.
+	* testsuite/experimental/any/misc/any_cast.cc: Likewise.
+
 	PR libstdc++/64903
 	* include/bits/stl_algo.h (is_partitioned): Use increment instead of
 	std::advance.
