PR other/79046 liboffloadmic/ 	* aclocal.m4: Regenerated. 	* Makefile.in: Regenerated. libcilkrts/ 	* aclocal.m4: Regenerated. 	* Makefile.in: Regenerated.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244684 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libmpx/ChangeLog
+++ b/libmpx/ChangeLog
@@ -1,7 +1,7 @@
 2017-01-19  Jakub Jelinek  <jakub@redhat.com>
 
 	PR other/79046
-	* aclocal.m4: Include ../config/acx.m4.
+	* aclocal.m4: Regenerated.
 	* configure: Regenerated.
 	* Makefile.in: Regenerated.
 	* mpxrt/Makefile.in: Regenerated.
